--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "migrate": "drizzle-kit migrate"
   },
   "dependencies": {
+    "@aws-sdk/client-rds-data": "^3.659.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.33.0",
     "lucide-react": "^0.446.0",
     "next": "14.2.13",
+    "next-auth": "^4.24.8",
     "next-themes": "^0.3.0",
     "postgres": "^3.4.4",
     "react": "^18",
@@ -28,6 +31,7 @@
     "web-push": "^3.6.7"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
