--- a/package.json
+++ b/package.json
@@ -11,16 +11,20 @@
     "migrate": "drizzle-kit migrate"
   },
   "dependencies": {
+    "@auth/drizzle-adapter": "^1.5.3",
     "@aws-sdk/client-rds-data": "^3.659.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@typescript-eslint/eslint-plugin": "^8.7.0",
+    "@typescript-eslint/parser": "^8.7.0",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.33.0",
+    "eslint-plugin-drizzle": "^0.2.3",
     "lucide-react": "^0.446.0",
     "next": "14.2.13",
-    "next-auth": "^4.24.8",
+    "next-auth": "^5.0.0-beta.22",
     "next-themes": "^0.3.0",
     "postgres": "^3.4.4",
     "react": "^18",
