--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "@auth/drizzle-adapter": "^1.5.3",
     "@aws-sdk/client-rds-data": "^3.659.0",
+    "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@typescript-eslint/eslint-plugin": "^8.7.0",
     "@typescript-eslint/parser": "^8.7.0",
@@ -30,10 +32,12 @@
     "postgres": "^3.4.4",
     "react": "^18",
     "react-dom": "^18",
-    "sst": "3.1.46",
+    "react-hook-form": "^7.53.0",
+    "sst": "^3.1.46",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "web-push": "^3.6.7"
+    "web-push": "^3.6.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
