--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,5 +7,14 @@
   "plugins": [
       "@typescript-eslint",
       "drizzle"
-  ]
+  ],
+ "overrides": [
+    {
+      "files": ["*.ts", "*.tsx"],
+      "parser": "@typescript-eslint/parser"
+    }
+  ],
+  "rules": {
+    "@typescript-eslint/no-empty-object-type": "off"
+  }
 }
