--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@auth/drizzle-adapter": "^1.5.3",
     "@aws-sdk/client-rds-data": "^3.659.0",
     "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-aspect-ratio": "^1.1.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@typescript-eslint/eslint-plugin": "^8.7.0",
     "@typescript-eslint/parser": "^8.7.0",
@@ -38,6 +41,7 @@
     "sst": "^3.1.47",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.3",
     "web-push": "^3.6.7",
     "zod": "^3.23.8"
   },
