--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev -H 0.0.0.0",
+    "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
     "generate": "sst shell drizzle-kit generate",
@@ -16,6 +16,9 @@
   "dependencies": {
     "@auth/drizzle-adapter": "^1.5.3",
     "@aws-sdk/client-rds-data": "^3.659.0",
+    "@aws-sdk/client-s3": "^3.658.1",
+    "@aws-sdk/credential-providers": "^3.658.1",
+    "@aws-sdk/s3-request-presigner": "^3.658.1",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -24,6 +27,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
@@ -35,6 +39,7 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "drizzle-orm": "^0.33.0",
     "eslint-plugin-drizzle": "^0.2.3",
     "lucide-react": "^0.446.0",
@@ -45,6 +50,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "sonner": "^1.5.0",
     "sst": "^3.1.47",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
